<resources>
    <string name="app_name">Rhasspy</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="home_assistant_header">Connection Information</string>

    <!-- Upload Preferences -->
    <string name="home_assistant_url_key">home_assistant_url</string>
    <string name="home_assistant_url_title">Home Assistant URL</string>
    <string name="home_assistant_access_token_key">home_assistant_access_token</string>
    <string name="home_assistant_access_token_title">Long-Lived Access Token</string>
    <string name="recognition_idle">Waiting</string>
    <string name="recognition_recognizing">Recognizing</string>
    <string name="recognition_listening">Listening</string>

    <string name="privacy_policy">Privacy Policy: https://carlo.barraco.ca/projects/rhasspy-android/privacy-policy.html</string>
    <string name="license">This app is open source under the MIT license. The source code is available here: https://github.com/cbarraco/rhasspy-android</string>
    <string name="about_page"><![CDATA[
    <h1>Rhasspy</h1>
    <p>Rhasspy is a voice assistant built into Home Assistant and provides voice control of Home Assistant integrations.</p>
    <p>I decided to implement this Android app to make Rhasspy more accessible and convenient to use. More specifically, I wanted to make Rhasspy available as an Assistant app so it can be started from the Assistant button on compatible headphones.</p>

    <p><b>Features:</b></p>
    <p>
        - Familiar UI consistent with Rhasspy on the Lovelace UI.<br/>
        - Easy to set up, just enter Home Assistant URL and Long-lived access token in Settings.<br/>
        - Voice recognition runs locally on the device, so no internet connection is required as long as Home Assistant is accessible.<br/>
        - Rhasspy is recognized by Android as an Assistant app so it can be set as the default Assistant in the Android settings app.
        - Voice recognition runs as a Service, so Rhasspy can be accessed when the screen is locked via the Assistant button on compatible headphones.<br/>
    </p>

    <p>Rhasspy needs permission to access the microphone to provide voice recognition.</p>

    <p>Root access is not required to use this app.</p>]]></string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_ada">Rhasspy</string>
</resources>