<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/home_assistant_header">
        <EditTextPreference
            app:icon="@drawable/baseline_language_24dp"
            app:key="@string/home_assistant_url_key"
            app:title="@string/home_assistant_url_title"
            android:summary="The web address to access Home Assistant\n\nExample: http://192.168.0.23:8123 or https://example.duckdns.org:8123" />
        <EditTextPreference
            android:inputType="textPassword"
            app:icon="@drawable/baseline_key_24dp"
            app:key="@string/home_assistant_access_token_key"
            app:title="@string/home_assistant_access_token_title"
            android:summary="Long-lived access token generated from Profile page in Home Assistant"/>
    </PreferenceCategory>
</PreferenceScreen>